SERVER-66916 Make rangeDeleterBatchSize and rangeDeleterBatchDelayMS dynamically configurable