src/mongo/db/s/metadata_manager.cpp
@@ -375,12 +375,6 @@ SharedSemiFuture<void> MetadataManager::_submitRangeForDeletion(
     const ChunkRange& range,
     const UUID& migrationId,
     Seconds delayForActiveQueriesOnSecondariesToComplete) {
-
-    int maxToDelete = rangeDeleterBatchSize.load();
-    if (maxToDelete <= 0) {
-        maxToDelete = kRangeDeleterBatchSizeDefault;
-    }
-
     auto cleanupComplete =
         removeDocumentsInRange(_executor,
                                std::move(waitForActiveQueriesToComplete),
@@ -389,7 +383,6 @@ SharedSemiFuture<void> MetadataManager::_submitRangeForDeletion(
                                _metadata.back()->metadata->getKeyPattern().getOwned(),
                                range,
                                migrationId,
-                               maxToDelete,
                                delayForActiveQueriesOnSecondariesToComplete);
 
     _rangesScheduledForDeletion.emplace_front(range, cleanupComplete);
@@ -402,6 +395,7 @@ SharedSemiFuture<void> MetadataManager::_submitRangeForDeletion(
             stdx::lock_guard<Latch> lg(self->_managerLock);
             self->_rangesScheduledForDeletion.erase(it);
         });
+
     return cleanupComplete;
 }
 
